--- a/index.html
+++ b/index.html
@@ -8,15 +8,105 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Hello, world!</title>
+    <title>Guess That Beer</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="jumbotron pt-5 pb-3">
+        <h1 class="display-4 text-center">Guess That Brewery!</h1>
+        
+        <div class="row">
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-6">
+                <p class="text-center mx-auto">Try to guess the mystery brewery based on the clues you receive. You get 5 incorrect guesses before you lose! Guess all the letters before you run out of guesses and you are a winner!</p>
+            </div>
+            <div class="col-md-3">
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-3">
+                <p>User Score: <span id="userScore">0</span></p>
+            </div>
+            <div class="col-md-6">
+                <p>Guesses Remaining: <span id="userGuesses">5</span></p>
+            </div>
+            <div class="col-md-3">
+                <p>Computer Score: <span id="computerScore">0</span></p>
+            </div>
+        </div>
+
+        <div class="row pt-4">
+            <div class="col-md-2">
+                
+            </div>
+            <div class="col-md-8">
+                <p>Letters Guessed: <span id="lettersGuessed">None</span></p>
+            </div>
+            <div class="col-md-2">
+
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2>">
+                <p>Why isnt this showing up</p>
+            </div>
+            <div class="col-md-5">
+                    <img src="http://via.placeholder.com/400x400" class="img-fluid" id="breweryImage">
+            </div>
+            <div class="col-md-5">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p class="pt-3 pb-3"><span id="hintOne">Hint #1</span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p class="pt-3 pb-3"><span id="hintTwo">Hint #2</span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p class="pt-3 pb-3"><span id="hintThree">Hint #3</span></p>
+                    </div>
+                </div>
+            </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-5">
+                    <h2 class=""><span id="blanks">_ _ _ _ _ _ _</span></h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-8">
+                    <h1 class="text-center"><span id="bottomText">This text will change based on what the player did</span></h1>
+                </div>
+                <div class="col-md-2">
+
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="assets/javascript/game.js"></script>
   </body>
 </html>
