--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Guess That Beer</title>
   </head>
-  <body>
-    <div class="jumbotron pt-5 pb-3">
+  <body class="bg-light">
+    <div class="jumbotron pt-5 pb-3 text-light" id="mainJumbotron">
         <h1 class="display-4 text-center">Guess That Brewery!</h1>
         
         <div class="row">
@@ -51,12 +51,12 @@
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container bg-light">
         <div class="row">
             <div class="col-md-2>">
-                <p>Why isnt this showing up</p>
+                
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 mt-2">
                     <img src="http://via.placeholder.com/400x400" class="img-fluid" id="breweryImage">
             </div>
             <div class="col-md-5">
@@ -89,13 +89,13 @@
             </div>
 
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-md-1">
 
                 </div>
-                <div class="col-md-8">
-                    <h1 class="text-center"><span id="bottomText">This text will change based on what the player did</span></h1>
+                <div class="col-md-10">
+                    <h1 class="text-center"><span id="bottomText">Press Any Key To Begin</span></h1>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-1">
 
                 </div>
             </div>
