basic functionality of game complete. started to do list

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
         <div class="row">
             <div class="col-md-3">
-                <p>User Score: <span id="userScore">0</span></p>
+                <p>User Score: <span id="user-score">0</span></p>
             </div>
             <div class="col-md-6">
                 <p>Guesses Remaining: <span id="userGuesses">5</span></p>
             </div>
             <div class="col-md-3">
-                <p>Computer Score: <span id="computerScore">0</span></p>
+                <p>Computer Score: <span id="computer-score">0</span></p>
             </div>
         </div>
 
