Added hint buttons and added to to do

--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
                         <p class="pt-3 pb-3"><span id="hintThree">Hint #3</span></p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-1 mx-auto">
+                        <button id= "btn1" class="btn btn-primary">Reveal Hint #1</button>
+                    </div>
+                    <div class="col-md-1 mx-auto">
+                        <button id= "btn2" class="btn btn-primary">Reveal Hint #2</button>
+                    </div>
+                    <div class="col-md-1 mx-auto">
+                        <button id = "btn3" class="btn btn-primary">Reveal Hint #3</button>
+                    </div>
+                </div>
             </div>
 
             </div>
